--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "node-adb": "^0.1.6",
-    "node-ssh": "^13.1.0"
+    "express": "^4.19.2",
+    "node-ssh": "^13.1.0",
+    "socket.io": "^4.7.5"
   }
 }
