--- a/config.json
+++ b/config.json
@@ -5,7 +5,6 @@
         "address": null,
         "sshPort": 22,
         "username": null,
-        "password": null,
-        "webPort": 8080
+        "password": null
     }
 }
